@@ -1,32 +1,5 @@
-# Project 0
-## About
-I started this project with the focus of remaking the famous web-based game, Wordle. This project tested the capabilities of JavaFX and has made me recognize the importance of such packages. I've (to my best ability) created a minimalistic color scheme and layout. By implementing a dark color scheme, the user can efficiently find the five-letter word without being flash banged by a white background. And with the help of a few buttons, the user can easily maneuver through the application. 
-
-This idea turned into a passion project (like many others). I'm proud of myself for this small achievement, and I view GitHub as a way to archive my accomplishments and progress. Having produced this, with under a year of experience, my passion for creating has grown. I know this road will be long, but it's one worth following. 
-
-I have plans to continue working on this project and making improvements.
-## Download
-
-Currently, the project may only be accessed and 'played' by downloading the zip file, opening it in an editor, and running the program yourself. The usage of Jar files is pretty outdated and was giving me a hard time - I spent countless hours trying to get this to work. Below is a step-by-step procedure on how to install and run the application.
-
-#### IntelliJ IDEA
-
-1. Download the [Wordle.zip](https://github.com/jegirhiny/wordle-repo/files/8328171/Wordle.zip)
-2. Search for and download an SDK from [JavaFX](https://gluonhq.com/products/javafx/)
-3. Extract contents from zip
-4. Import the project into IntelliJ
-5. Update project libraries
-- File ~ Project Stucture ~ Libraries ~ New Project Library (+) ~ Java ~ Select JavaFX lib Folder
-6. Update run configuration
-- Run ~ Edit Configurations ~ Application (Main) ~ Program Arguements
-- `--module-path "/path/to/javafx/lib" --add-modules javafx.controls,javafx.fxml`
-7. Hit play, and you're up and running!
-## Contact
-Jake Girhiny - jegirhiny@gmail.com
-## License
-Default ([learn more](https://docs.github.com/en/repositories/managing-your-repositorys-settings-and-features/customizing-your-repository/licensing-a-repository))
-- All rights reserved
 ## Showcase
+
 ![Wordle Blank](https://user-images.githubusercontent.com/93138298/159413037-a28ce633-e5c4-4727-a198-3c3444394340.png)
 ![Wordle Answer](https://user-images.githubusercontent.com/93138298/159413056-a367ff93-a480-4517-92a9-323efda5d702.png)
 ![Wordle Analytics](https://user-images.githubusercontent.com/93138298/159413066-c25d3970-90d3-4296-86ce-cface1eb4802.png)
